2005-11-07 Mikhail Khodjaiants
	Bug 115385: Pointer to a structure is not updated correctly
	* CVariable.java

2005-10-24 Mikhail Khodjaiants
	Fix for bugs 112008 and 111828.
	Applied modified patch from Matthias Spycher (matthias@coware.com).
	* CBreakpointManager.java

2005-09-30 Mikhail Khodjaiants
	Partial fix for bug 109950: Major crash and stack overflow if two projects reference each other.
	* CDebugTarget.java
	* CSourceLookupDirector.java

2005-09-16 Mikhail Khodjaiants
	Bug 109785: "mi_cmd_var_create: unable to create variable object" when stepping out of stack frame.
	* CStackFrame.java

2005-09-09 Mikhail Khodjaiants
	Bug 109206: Last register group is not added if it has only one register.
	* CRegisterManager.java

2005-09-06 Mikhail Khodjaiants
	Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).
	* CDebugUtils.java
	* CDIDebugModel.java
	* CBreakpointManager.java
	* CDebugTarget.java
	* CGlobalValue.java
	* CRegisterGroup.java
	* CDirectorySourceLocation.java
	* CProjectSourceLocation.java
	* CSourceLocator.java

2005-09-06 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* ICDTLaunchConfigurationConstants.java

2005-09-01 Mikhail Khodjaiants
	Bug 108424: Debugger stops on removed breakpoints.
	* CBreakpointManager.java

2005-08-25 Mikhail Khodjaiants
	Bug 106241: Argument stopInMain has no impact in method org.eclipse.cdt.debug.core.CDIDebugModel#newDebugTarget.
	* CDIDebugModel.java

2005-08-25 Mikhail Khodjaiants
	Bug 108028: Duplicate watchpointes.
	* CBreakpointManager.java

2005-08-23 Mikhail Khodjaiants
	Bug 107787: Casting variable to array causes NPE.
	* CIndexedValue.java

2005-08-04 Alain Magloire
	ClastCastException being throw in CThread.getAdapter(IRunToLine.class);
	Patch solution to ignore the exception.

	* src/org/eclipse/cdt/debug/internal/core/model/CThread.java

2005-07-29 Mikhail Khodjaiants